# experimentx-soroban

./: .env.example  .gitignore  .vercelignore  Cargo.toml  README.md  netlify.toml  package-lock.json  package.json  vercel.json
.github/workflows/: ci.yml
contracts/badge_registry/: Cargo.toml
contracts/badge_registry/src/: lib.rs
contracts/experiment_x/: Cargo.toml
contracts/experiment_x/src/: lib.rs
contracts/experiment_x/test_snapshots/test/: creates_experiment_and_reads_dashboard.1.json  creates_profile_and_reads_dashboard.1.json  emits_result_event_once_when_experiment_concludes.1.json  finalizes_overdue_experiment_and_records_failure.1.json  logs_compliance_and_grows_streak_across_days.1.json  logs_first_check_in_when_ledger_day_matches_or_lags_start_day.1.json  rejects_duplicate_daily_check_ins.1.json  rejects_invalid_experiment_durations.1.json  rejects_short_experiment_titles.1.json  tracks_global_stats_across_profiles_experiments_and_logs.1.json
deployments/: testnet.json
frontend/: .env.example  eslint.config.js  index.html  package.json  vite.config.js
frontend/src/: App.jsx  App.test.jsx  main.jsx  styles.css
frontend/src/lib/: contract-config.js  experimentX.js
scripts/: deploy-stellar.mjs  export-frontend-config.js  export-frontend-config.mjs
