[workspace]
resolver = "2"
members = [
  "contracts/experiment_x",
  "contracts/badge_registry",
]

[workspace.dependencies]
soroban-sdk = "25.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

